--- a/src/back-end/TrafficLayer/TrafficLightCoordinatorService/PostgreSQL/docker-compose.override.yaml
+++ b/src/back-end/TrafficLayer/TrafficLightCoordinatorService/PostgreSQL/docker-compose.override.yaml
@@ -1,7 +1,7 @@
 services:
-  traffic_light_coordinator_postgres:
+  traffic_light_postgres:
     environment:
-      POSTGRES_DB: TrafficLightDb
+      POSTGRES_DB: TrafficLightDB
       POSTGRES_USER: postgres
       POSTGRES_PASSWORD: postgres123
     ports:
