--- a/src/back-end/LogLayer/LogService/LogAPI/docker-compose.override.yaml
+++ b/src/back-end/LogLayer/LogService/LogAPI/docker-compose.override.yaml
@@ -9,12 +9,21 @@ services:
       ASPNETCORE_ENVIRONMENT: Development
 
       # ===============================
-      # Database (MongoDB)
+      # Databases
       # ===============================
-      DefaultConnection__ConnectionString: mongodb://mongo:mongo123@log_mongo:27017
-      DefaultConnection__DatabaseName: LogDb
-      DefaultConnection__AuditLogsCollectionName: audit_logs
-      DefaultConnection__ErrorLogsCollectionName: error_logs
+
+      ## LogDB (MongoDB)
+      Mongo__ConnectionString: mongodb://mongo:mongo123@log_mongo:27017
+      Mongo__Database: LogDB
+      Mongo__AuditLogsCollection: audit_logs
+      Mongo__ErrorLogsCollection: error_logs
+
+      # ===============================
+      # CORS Policy
+      # ===============================
+      Cors__AllowedOrigins: http://localhost:5173
+      Cors__AllowedMethods: GET,POST,PUT,PATCH,DELETE
+      Cors__AllowedHeaders: Content-Type,Authorization
 
       # ===============================
       # JWT Authentication
@@ -32,31 +41,48 @@ services:
       RabbitMQ__Password: rabbitmq123
 
       # ===============================
-      # Exchanges
+      # RabbitMQ Exchanges
       # ===============================
-      RabbitMQ__Exchanges__Logs: LOG.EXCHANGE
 
-      # ===============================
-      # Queues (Consumes)
-      # ===============================
-      RabbitMQ__Queues__UserLogs: log.user_layer.queue
-      RabbitMQ__Queues__TrafficLogs: log.traffic_layer.queue
-      RabbitMQ__Queues__SensorLogs: log.sensor_layer.queue
+      ## LOG.EXCHANGE
+      RabbitMQ__Exchanges__Log: LOG.EXCHANGE
+      # --- Consume (Queues)
+      RabbitMQ__Queues__UserAudit: log.user_layer.audit.queue
+      RabbitMQ__Queues__TrafficAudit: log.traffic_layer.audit.queue
+      RabbitMQ__Queues__SensorAudit: log.sensor_layer.audit.queue
+      RabbitMQ__Queues__UserError: log.user_layer.error.queue
+      RabbitMQ__Queues__TrafficError: log.traffic_layer.error.queue
+      RabbitMQ__Queues__SensorError: log.sensor_layer.error.queue
 
-      # ===============================
-      # Routing Keys (Consumes)
-      # ===============================
-      ## User Layer
-      RabbitMQ__RoutingKeys__UserAudit: log.user.{service_name}.audit
-      RabbitMQ__RoutingKeys__UserError: log.user.{service_name}.error
+      # --- Consume (Routing Keys - User Layer)
+      RabbitMQ__RoutingKeys__User__UserServiceAudit: log.user.user_service.audit
+      RabbitMQ__RoutingKeys__User__NotificationServiceAudit: log.user.notification_service.audit
+      RabbitMQ__RoutingKeys__User__UserServiceError: log.user.user_service.error
+      RabbitMQ__RoutingKeys__User__NotificationServiceError: log.user.notification_service.error
 
-      ## Traffic Layer
-      RabbitMQ__RoutingKeys__TrafficAudit: log.traffic.{service_name}.audit
-      RabbitMQ__RoutingKeys__TrafficError: log.traffic.{service_name}.error
+      # --- Consume (Routing Keys - Traffic Layer)
+      RabbitMQ__RoutingKeys__Traffic__AnalyticsAudit: log.traffic.analytics_service.audit
+      RabbitMQ__RoutingKeys__Traffic__CoordinatorAudit: log.traffic.coordinator_service.audit
+      RabbitMQ__RoutingKeys__Traffic__IntersectionAudit: log.traffic.intersection_controller_service.audit
+      RabbitMQ__RoutingKeys__Traffic__LightControllerAudit: log.traffic.light_controller_service.audit
+      RabbitMQ__RoutingKeys__Traffic__AnalyticsError: log.traffic.analytics_service.error
+      RabbitMQ__RoutingKeys__Traffic__CoordinatorError: log.traffic.coordinator_service.error
+      RabbitMQ__RoutingKeys__Traffic__IntersectionError: log.traffic.intersection_controller_service.error
+      RabbitMQ__RoutingKeys__Traffic__LightControllerError: log.traffic.light_controller_service.error
 
-      ## Sensor Layer
-      RabbitMQ__RoutingKeys__SensorAudit: log.sensor.{service_name}.audit
-      RabbitMQ__RoutingKeys__SensorError: log.sensor.{service_name}.error
+      # --- Consume (Routing Keys - Sensor Layer)
+      RabbitMQ__RoutingKeys__Sensor__VehicleAudit: log.sensor.vehicle_detection_service.audit
+      RabbitMQ__RoutingKeys__Sensor__EmergencyAudit: log.sensor.emergency_vehicle_detection_service.audit
+      RabbitMQ__RoutingKeys__Sensor__PublicTransportAudit: log.sensor.public_transport_detection_service.audit
+      RabbitMQ__RoutingKeys__Sensor__PedestrianAudit: log.sensor.pedestrian_detection_service.audit
+      RabbitMQ__RoutingKeys__Sensor__CyclistAudit: log.sensor.cyclist_detection_service.audit
+      RabbitMQ__RoutingKeys__Sensor__IncidentAudit: log.sensor.incident_detection_service.audit
+      RabbitMQ__RoutingKeys__Sensor__VehicleError: log.sensor.vehicle_detection_service.error
+      RabbitMQ__RoutingKeys__Sensor__EmergencyError: log.sensor.emergency_vehicle_detection_service.error
+      RabbitMQ__RoutingKeys__Sensor__PublicTransportError: log.sensor.public_transport_detection_service.error
+      RabbitMQ__RoutingKeys__Sensor__PedestrianError: log.sensor.pedestrian_detection_service.error
+      RabbitMQ__RoutingKeys__Sensor__CyclistError: log.sensor.cyclist_detection_service.error
+      RabbitMQ__RoutingKeys__Sensor__IncidentError: log.sensor.incident_detection_service.error
 
     depends_on:
       log_mongo:
