--- a/src/back-end/SensorLayer/DetectionDB/Mongo/docker-compose.override.yaml
+++ b/src/back-end/SensorLayer/DetectionDB/Mongo/docker-compose.override.yaml
@@ -1,15 +1,15 @@
 services:
-  log_mongo:
+  detection_mongo:
     ports:
-      - '27017:27017'
+      - '27019:27017'
     environment:
       MONGO_INITDB_ROOT_USERNAME: mongo
       MONGO_INITDB_ROOT_PASSWORD: mongo123
     volumes:
-      - log_mongo_data:/data/db
+      - detection_mongo_data:/data/db
     restart: always
 
 volumes:
-  log_mongo_data:
-    name: log_mongo_data
+  detection_mongo_data:
+    name: detection_mongo_data
     driver: local
