--- a/src/back-end/TrafficLayer/IntersectionControllerService/IntersectionControllerAPI/docker-compose.override.yaml
+++ b/src/back-end/TrafficLayer/IntersectionControllerService/IntersectionControllerAPI/docker-compose.override.yaml
@@ -9,19 +9,45 @@ services:
       ASPNETCORE_ENVIRONMENT: Development
 
       # ===============================
+      # Databases
+      # ===============================
+
+      ## TrafficLightCacheDB (Redis)
+      Redis__TrafficLight__Host: traffic_light_cache_redis
+      Redis__TrafficLight__Port: 6379
+      Redis__TrafficLight__Password: ""
+      Redis__TrafficLight__Database: 0
+      Redis__TrafficLight__KeyPrefix__State: traffic_light:{intersection_id}:state
+      Redis__TrafficLight__KeyPrefix__Duration: traffic_light:{intersection_id}:duration
+      Redis__TrafficLight__KeyPrefix__LastUpdate: traffic_light:{intersection_id}:last_update
+      Redis__TrafficLight__KeyPrefix__Priority: traffic_light:{intersection_id}:priority
+      Redis__TrafficLight__KeyPrefix__QueueLength: traffic_light:{intersection_id}:queue_length
+
+      ## DetectionCacheDB (Redis)
+      Redis__Detection__Host: detection_cache_redis
+      Redis__Detection__Port: 6379
+      Redis__Detection__Password: ""
+      Redis__Detection__Database: 0
+      Redis__Detection__KeyPrefix__VehicleCount: sensor:{intersection_id}:vehicle_count
+      Redis__Detection__KeyPrefix__PedestrianCount: sensor:{intersection_id}:pedestrian_count
+      Redis__Detection__KeyPrefix__CyclistCount: sensor:{intersection_id}:cyclist_count
+      Redis__Detection__KeyPrefix__EmergencyDetected: sensor:{intersection_id}:emergency_detected
+      Redis__Detection__KeyPrefix__PublicTransportDetected: sensor:{intersection_id}:public_transport_detected
+      Redis__Detection__KeyPrefix__IncidentDetected: sensor:{intersection_id}:incident_detected
+
+      # ===============================
+      # CORS Policy
+      # ===============================
+      Cors__AllowedOrigins: http://localhost:5173
+      Cors__AllowedMethods: GET,POST,PUT,PATCH,DELETE
+      Cors__AllowedHeaders: Content-Type,Authorization
+
+      # ===============================
       # JWT Authentication
       # ===============================
       Jwt__Issuer: http://stls_backend:8080
       Jwt__Audience: http://stls_backend:8080
       Jwt__Key: Nn7kLa8Rzv1XHt9UwMqP4YbFdJxVt2Km
-
-      # ===============================
-      # Redis Connection
-      # ===============================
-      Redis__Host: intersection_redis
-      Redis__Port: 6379
-      Redis__Password: ""
-      Redis__Database: 0
 
       # ===============================
       # RabbitMQ Connection
@@ -32,42 +58,37 @@ services:
       RabbitMQ__Password: rabbitmq123
 
       # ===============================
-      # Exchanges
+      # RabbitMQ Exchanges
       # ===============================
+
+      ## TRAFFIC.EXCHANGE
       RabbitMQ__Exchanges__Traffic: TRAFFIC.EXCHANGE
+      # --- Publish
+      RabbitMQ__RoutingKeys__Traffic__LightControl: traffic.light.control.{intersection_id}.{light_id}
+      RabbitMQ__RoutingKeys__Priority__EmergencyVehicle: priority.emergency_vehicle.{intersection_id}
+      RabbitMQ__RoutingKeys__Priority__PublicTransport: priority.public_transport.{intersection_id}
+      RabbitMQ__RoutingKeys__Priority__Cyclist: priority.cyclist.{intersection_id}
+      RabbitMQ__RoutingKeys__Priority__Pedestrian: priority.pedestrian.{intersection_id}
+      RabbitMQ__RoutingKeys__Priority__Incident: priority.incident.{intersection_id}
+      # --- Consume
+      RabbitMQ__Queues__Traffic__LightUpdate: traffic.light.update.intersection_controller.queue
+      RabbitMQ__RoutingKeys__Traffic__LightUpdate: traffic.light.update.{intersection_id}
+
+      ## SENSOR.EXCHANGE
       RabbitMQ__Exchanges__Sensor: SENSOR.EXCHANGE
-      RabbitMQ__Exchanges__Logs: LOG.EXCHANGE
+      # --- Consume
+      RabbitMQ__Queues__Sensor__Intersection: sensor.data.intersection_controller.queue
+      RabbitMQ__RoutingKeys__Sensor__VehicleCount: sensor.vehicle.count.{intersection_id}
+      RabbitMQ__RoutingKeys__Sensor__EmergencyVehicle: sensor.emergency_vehicle.detected.{intersection_id}
+      RabbitMQ__RoutingKeys__Sensor__PublicTransport: sensor.public_transport.detected.{intersection_id}
+      RabbitMQ__RoutingKeys__Sensor__PedestrianCount: sensor.pedestrian.count.{intersection_id}
+      RabbitMQ__RoutingKeys__Sensor__CyclistCount: sensor.cyclist.count.{intersection_id}
+      RabbitMQ__RoutingKeys__Sensor__IncidentDetected: sensor.incident.detected.{intersection_id}
 
-      # ===============================
-      # Queues (Consumes)
-      # ===============================
-      RabbitMQ__Queues__TrafficIntersection: traffic.intersection_controller_service.queue
-      RabbitMQ__Queues__SensorIntersection: sensor.intersection_controller_service.queue
+      ## LOG.EXCHANGE
+      RabbitMQ__Exchanges__Log: LOG.EXCHANGE
+      # --- Publish
+      RabbitMQ__RoutingKeys__Log__Audit: log.traffic.intersection_controller_service.audit
+      RabbitMQ__RoutingKeys__Log__Error: log.traffic.intersection_controller_service.error
 
-      # ===============================
-      # Routing Keys (Consumes)
-      # ===============================
-      RabbitMQ__RoutingKeys__TrafficLightUpdate: traffic.light.update.{intersection_id}
-      RabbitMQ__RoutingKeys__SensorVehicleCount: sensor.vehicle.count.{intersection_id}
-      RabbitMQ__RoutingKeys__SensorEmergencyVehicle: sensor.vehicle.emergency.{intersection_id}
-      RabbitMQ__RoutingKeys__SensorPublicTransport: sensor.public_transport.request.{intersection_id}
-      RabbitMQ__RoutingKeys__SensorCyclist: sensor.cyclist.request.{intersection_id}
-      RabbitMQ__RoutingKeys__SensorPedestrian: sensor.pedestrian.request.{intersection_id}
-      RabbitMQ__RoutingKeys__SensorIncident: sensor.incident.detected.{intersection_id}
-
-
-      # ===============================
-      # Routing Keys (Publishes)
-      # ===============================
-      RabbitMQ__RoutingKeys__PriorityEmergency: priority.emergency.{intersection_id}
-      RabbitMQ__RoutingKeys__PriorityPublicTransport: priority.public_transport.{intersection_id}
-      RabbitMQ__RoutingKeys__PriorityPedestrian: priority.pedestrian.{intersection_id}
-      RabbitMQ__RoutingKeys__PriorityCyclist: priority.cyclist.{intersection_id}
-      RabbitMQ__RoutingKeys__PriorityIncident: priority.incident.{intersection_id}
-      RabbitMQ__RoutingKeys__TrafficLightControl: traffic.light.control.{intersection_id}.{light_id}
-
-      # ===============================
-      # Logs
-      # ===============================
-      RabbitMQ__RoutingKeys__TrafficLogsAudit: log.traffic.intersection_controller_service.audit
-      RabbitMQ__RoutingKeys__TrafficLogsError: log.traffic.intersection_controller_service.error
+    restart: always
