--- a/src/back-end/TrafficLayer/TrafficAnalyticsService/TrafficAnalyticsAPI/docker-compose.override.yaml
+++ b/src/back-end/TrafficLayer/TrafficAnalyticsService/TrafficAnalyticsAPI/docker-compose.override.yaml
@@ -1,7 +1,7 @@
 services:
   traffic_analytics_api:
     ports:
-      - "5208:8080"
+      - '5208:8080'
     environment:
       # ===============================
       # ASP.NET Core
@@ -9,9 +9,30 @@ services:
       ASPNETCORE_ENVIRONMENT: Development
 
       # ===============================
-      # Database (PostgreSQL)
+      # Databases
       # ===============================
-      ConnectionStrings__DefaultConnection: Host=traffic_analytics_postgres;Port=5432;Database=TrafficAnalyticsDb;Username=postgres;Password=postgres123
+
+      ## TrafficAnalyticsDB (PostgreSQL)
+      PostgreSQL__ConnectionString: Host=traffic_analytics_postgres;Port=5432;Database=TrafficAnalyticsDB;Username=postgres;Password=postgres123
+
+      ## DetectionCacheDB (Redis)
+      Redis__Host: detection_cache_redis
+      Redis__Port: 6379
+      Redis__Password: ""
+      Redis__Database: 0
+      Redis__KeyPrefix__VehicleCount: sensor:{intersection_id}:vehicle_count
+      Redis__KeyPrefix__PedestrianCount: sensor:{intersection_id}:pedestrian_count
+      Redis__KeyPrefix__CyclistCount: sensor:{intersection_id}:cyclist_count
+      Redis__KeyPrefix__EmergencyDetected: sensor:{intersection_id}:emergency_detected
+      Redis__KeyPrefix__PublicTransportDetected: sensor:{intersection_id}:public_transport_detected
+      Redis__KeyPrefix__IncidentDetected: sensor:{intersection_id}:incident_detected
+
+      # ===============================
+      # CORS Policy
+      # ===============================
+      Cors__AllowedOrigins: http://localhost:5173
+      Cors__AllowedMethods: GET,POST,PUT,PATCH,DELETE
+      Cors__AllowedHeaders: Content-Type,Authorization
 
       # ===============================
       # JWT Authentication
@@ -29,38 +50,32 @@ services:
       RabbitMQ__Password: rabbitmq123
 
       # ===============================
-      # Exchanges
+      # RabbitMQ Exchanges
       # ===============================
-      RabbitMQ__Exchanges__Logs: LOG.EXCHANGE
+
+      ## TRAFFIC.EXCHANGE
       RabbitMQ__Exchanges__Traffic: TRAFFIC.EXCHANGE
+      # --- Publish
+      RabbitMQ__RoutingKeys__Traffic__Congestion: traffic.analytics.congestion.{intersection_id}
+      RabbitMQ__RoutingKeys__Traffic__Summary: traffic.analytics.summary.{intersection_id}
+      RabbitMQ__RoutingKeys__Traffic__Incident: traffic.analytics.incident.{intersection_id}
+
+      ## SENSOR.EXCHANGE
       RabbitMQ__Exchanges__Sensor: SENSOR.EXCHANGE
+      # --- Consume
+      RabbitMQ__Queues__Sensor__Analytics: sensor.data.analytics.queue
+      RabbitMQ__RoutingKeys__Sensor__VehicleCount: sensor.vehicle.count.{intersection_id}
+      RabbitMQ__RoutingKeys__Sensor__EmergencyVehicle: sensor.emergency_vehicle.detected.{intersection_id}
+      RabbitMQ__RoutingKeys__Sensor__PublicTransport: sensor.public_transport.detected.{intersection_id}
+      RabbitMQ__RoutingKeys__Sensor__PedestrianCount: sensor.pedestrian.count.{intersection_id}
+      RabbitMQ__RoutingKeys__Sensor__CyclistCount: sensor.cyclist.count.{intersection_id}
+      RabbitMQ__RoutingKeys__Sensor__IncidentDetected: sensor.incident.detected.{intersection_id}
 
-      # ===============================
-      # Queues (Consumes)
-      # ===============================
-      RabbitMQ__Queues__Sensor: sensor.traffic_analytics_service.queue
-
-      # ===============================
-      # Routing Keys (Consumes)
-      # ===============================
-      RabbitMQ__RoutingKeys__VehicleCount: sensor.vehicle.count.{intersection_id}
-      RabbitMQ__RoutingKeys__VehicleEmergency: sensor.vehicle.emergency.{intersection_id}
-      RabbitMQ__RoutingKeys__PublicTransportRequest: sensor.public_transport.request.{intersection_id}
-      RabbitMQ__RoutingKeys__CyclistRequest: sensor.cyclist.request.{intersection_id}
-      RabbitMQ__RoutingKeys__IncidentDetected: sensor.incident.detected.{intersection_id}
-
-      # ===============================
-      # Routing Keys (Publishes)
-      # ===============================
-      RabbitMQ__RoutingKeys__TrafficCongestion: traffic.analytics.congestion.{intersection_id}
-      RabbitMQ__RoutingKeys__TrafficSummary: traffic.analytics.summary.{intersection_id}
-      RabbitMQ__RoutingKeys__TrafficIncident: traffic.analytics.incident.{intersection_id}
-
-      # ===============================
-      # Logs
-      # ===============================
-      RabbitMQ__RoutingKeys__Audit: log.traffic.analytics_service.audit
-      RabbitMQ__RoutingKeys__Error: log.traffic.analytics_service.error
+      ## LOG.EXCHANGE
+      RabbitMQ__Exchanges__Log: LOG.EXCHANGE
+      # --- Publish
+      RabbitMQ__RoutingKeys__Log__Audit: log.traffic.analytics_service.audit
+      RabbitMQ__RoutingKeys__Log__Error: log.traffic.analytics_service.error
 
     depends_on:
       traffic_analytics_postgres:
