--- a/src/back-end/TrafficLayer/TrafficAnalyticsService/TrafficAnalyticsAPI/docker-compose.yaml
+++ b/src/back-end/TrafficLayer/TrafficAnalyticsService/TrafficAnalyticsAPI/docker-compose.yaml
@@ -4,6 +4,7 @@ services:
     container_name: traffic_analytics_api_container
     networks:
       - traffic_analytics_network
+      - detection_cache_network
       - rabbitmq_network
 
 networks:
@@ -11,7 +12,10 @@ networks:
     name: traffic_analytics_network
     driver: bridge
     external: true
-
+  detection_cache_network:
+    name: detection_cache_network
+    driver: bridge
+    external: true
   rabbitmq_network:
     name: rabbitmq_network
     driver: bridge
