--- a/src/back-end/TrafficLayer/TrafficLightControllerService/TrafficLightControllerAPI/docker-compose.override.yaml
+++ b/src/back-end/TrafficLayer/TrafficLightControllerService/TrafficLightControllerAPI/docker-compose.override.yaml
@@ -9,19 +9,33 @@ services:
       ASPNETCORE_ENVIRONMENT: Development
 
       # ===============================
+      # Databases
+      # ===============================
+
+      ## TrafficLightCacheDB (Redis)
+      Redis__TrafficLight__Host: traffic_light_cache_redis
+      Redis__TrafficLight__Port: 6379
+      Redis__TrafficLight__Password: ""
+      Redis__TrafficLight__Database: 0
+      Redis__TrafficLight__KeyPrefix__State: traffic_light:{intersection_id}:state
+      Redis__TrafficLight__KeyPrefix__Duration: traffic_light:{intersection_id}:duration
+      Redis__TrafficLight__KeyPrefix__LastUpdate: traffic_light:{intersection_id}:last_update
+      Redis__TrafficLight__KeyPrefix__Priority: traffic_light:{intersection_id}:priority
+      Redis__TrafficLight__KeyPrefix__QueueLength: traffic_light:{intersection_id}:queue_length
+
+      # ===============================
+      # CORS Policy
+      # ===============================
+      Cors__AllowedOrigins: http://localhost:5173
+      Cors__AllowedMethods: GET,POST,PUT,PATCH,DELETE
+      Cors__AllowedHeaders: Content-Type,Authorization
+
+      # ===============================
       # JWT Authentication
       # ===============================
       Jwt__Issuer: http://stls_backend:8080
       Jwt__Audience: http://stls_backend:8080
       Jwt__Key: Nn7kLa8Rzv1XHt9UwMqP4YbFdJxVt2Km
-
-      # ===============================
-      # Redis Connection
-      # ===============================
-      Redis__Host: intersection_redis
-      Redis__Port: 6379
-      Redis__Password: ""
-      Redis__Database: 0
 
       # ===============================
       # RabbitMQ Connection
@@ -32,23 +46,19 @@ services:
       RabbitMQ__Password: rabbitmq123
 
       # ===============================
-      # Exchanges
+      # RabbitMQ Exchanges
       # ===============================
+
+      ## TRAFFIC.EXCHANGE
       RabbitMQ__Exchanges__Traffic: TRAFFIC.EXCHANGE
-      RabbitMQ__Exchanges__Logs: LOG.EXCHANGE
+      # --- Consume
+      RabbitMQ__Queues__Traffic__LightControl: traffic.light.controller.queue
+      RabbitMQ__RoutingKeys__Traffic__LightControl: traffic.light.control.{intersection_id}
 
-      # ===============================
-      # Queues (Consumes)
-      # ===============================
-      RabbitMQ__Queues__TrafficLightControl: traffic.light_controller_service.queue
+      ## LOG.EXCHANGE
+      RabbitMQ__Exchanges__Log: LOG.EXCHANGE
+      # --- Publish
+      RabbitMQ__RoutingKeys__Log__Audit: log.traffic.light_controller_service.audit
+      RabbitMQ__RoutingKeys__Log__Error: log.traffic.light_controller_service.error
 
-      # ===============================
-      # Routing Keys (Consumes)
-      # ===============================
-      RabbitMQ__RoutingKeys__TrafficLightControl: traffic.light.control.{intersection_id}.{light_id}
-
-      # ===============================
-      # Logs
-      # ===============================
-      RabbitMQ__RoutingKeys__TrafficLogsAudit: log.traffic.light_controller_service.audit
-      RabbitMQ__RoutingKeys__TrafficLogsError: log.traffic.light_controller_service.error
+    restart: always
