--- a/src/back-end/TrafficLayer/TrafficLightControllerService/TrafficLightControllerAPI/docker-compose.yaml
+++ b/src/back-end/TrafficLayer/TrafficLightControllerService/TrafficLightControllerAPI/docker-compose.yaml
@@ -3,20 +3,15 @@ services:
     image: ath21/stls:traffic_light_controller_api
     container_name: traffic_light_controller_api_container
     networks:
-      - intersection_network
+      - traffic_light_cache_network
       - rabbitmq_network
-      - redis_network
 
 networks:
-  intersection_network:
-    name: intersection_network
+  traffic_light_cache_network:
+    name: traffic_light_cache_network
     driver: bridge
     external: true
   rabbitmq_network:
     name: rabbitmq_network
-    driver: bridge
-    external: true
-  redis_network:
-    name: redis_network
     driver: bridge
     external: true
