--- a/src/back-end/TrafficLayer/TrafficLightCoordinatorService/PostgreSQL/docker-compose.yaml
+++ b/src/back-end/TrafficLayer/TrafficLightCoordinatorService/PostgreSQL/docker-compose.yaml
@@ -1,12 +1,12 @@
 services:
-  traffic_light_coordinator_postgres:
+  traffic_light_postgres:
     image: postgres:16
-    container_name: traffic_light_coordinator_postgres
+    container_name: traffic_light_postgres_container
     networks:
-      - traffic_light_coordinator_network
+      - traffic_light_network
 
 networks:
-  traffic_light_coordinator_network:
-    name: traffic_light_coordinator_network
+  traffic_light_network:
+    name: traffic_light_network
     driver: bridge
     external: true
