--- a/src/back-end/UserLayer/NotificationService/NotificationAPI/docker-compose.override.yaml
+++ b/src/back-end/UserLayer/NotificationService/NotificationAPI/docker-compose.override.yaml
@@ -1,7 +1,7 @@
 services:
   notification_api:
     ports:
-      - "5087:8080"
+      - '5087:8080'
     environment:
       # ===============================
       # ASP.NET Core
@@ -9,12 +9,21 @@ services:
       ASPNETCORE_ENVIRONMENT: Development
 
       # ===============================
-      # Database (MongoDB)
+      # Databases
       # ===============================
-      DefaultConnection__ConnectionString: mongodb://mongo:mongo123@notification_mongo:27017
-      DefaultConnection__DatabaseName: NotificationDb
-      DefaultConnection__NotificationsCollectionName: notifications
-      DefaultConnection__DeliveryLogsCollectionName: delivery_logs
+
+      ## NotificationDB (MongoDB)
+      Mongo__ConnectionString: mongodb://mongo:mongo123@notification_mongo:27017
+      Mongo__Database: NotificationDB
+      Mongo__NotificationsCollection: notifications
+      Mongo__DeliveryLogsCollection: delivery_logs
+
+      # ===============================
+      # CORS Policy
+      # ===============================
+      Cors__AllowedOrigins: http://localhost:5173
+      Cors__AllowedMethods: GET,POST,PUT,PATCH,DELETE
+      Cors__AllowedHeaders: Content-Type,Authorization
 
       # ===============================
       # JWT Authentication
@@ -26,12 +35,12 @@ services:
       # ===============================
       # Email Settings
       # ===============================
-      EmailSettings__SmtpServer: smtp.gmail.com
-      EmailSettings__Port: 587
-      EmailSettings__SenderName: UNIWA STLS
-      EmailSettings__SenderEmail: ice19390005@gmail.com
-      EmailSettings__Username: ice19390005@gmail.com
-      EmailSettings__Password: waqr ilfj fxpu banq
+      Email__SmtpServer: smtp.gmail.com
+      Email__Port: 587
+      Email__SenderName: UNIWA STLS
+      Email__SenderEmail: ice19390005@gmail.com
+      Email__Username: ice19390005@gmail.com
+      Email__Password: waqr ilfj fxpu banq
 
       # ===============================
       # RabbitMQ Connection
@@ -42,42 +51,31 @@ services:
       RabbitMQ__Password: rabbitmq123
 
       # ===============================
-      # Exchanges
+      # RabbitMQ Exchanges
       # ===============================
-      RabbitMQ__Exchanges__Logs: LOG.EXCHANGE
+
+      ## USER.EXCHANGE
       RabbitMQ__Exchanges__User: USER.EXCHANGE
+      # --- Publish
+      RabbitMQ__RoutingKeys__User__NotificationAlert: user.notification.alert
+      RabbitMQ__RoutingKeys__User__NotificationPublic: notification.event.public_notice
+      # --- Consume
+      RabbitMQ__Queues__User__Requests: requests.notification.queue
+      RabbitMQ__RoutingKeys__User__NotificationRequest: user.notification.request
+
+      ## TRAFFIC.EXCHANGE
       RabbitMQ__Exchanges__Traffic: TRAFFIC.EXCHANGE
+      # --- Consume
+      RabbitMQ__Queues__Traffic__Analytics: traffic.analytics.notification.queue
+      RabbitMQ__RoutingKeys__Traffic__Congestion: traffic.analytics.congestion.{intersection_id}
+      RabbitMQ__RoutingKeys__Traffic__Summary: traffic.analytics.summary.{intersection_id}
+      RabbitMQ__RoutingKeys__Traffic__Incident: traffic.analytics.incident.{intersection_id}
 
-      # ===============================
-      # Routing Keys (Publishes)
-      # ===============================
-      ## User Exchange
-      RabbitMQ__RoutingKeys__NotificationAlert: user.notification.alert
-      RabbitMQ__RoutingKeys__NotificationPublic: notification.event.public_notice
-
-      ## Log Exchange
-      RabbitMQ__RoutingKeys__Audit: log.user.notification_service.audit
-      RabbitMQ__RoutingKeys__Error: log.user.notification_service.error
-
-      # ===============================
-      # Queues (Consumes)
-      # ===============================
-      ## User Exchange
-      RabbitMQ__Queues__User: user.notification_service.queue
-
-      ## Traffic Exchange
-      RabbitMQ__Queues__Traffic: traffic.notification_service.queue
-
-      # ===============================
-      # Routing Keys (Consumes)
-      # ===============================
-      ## User Exchange
-      RabbitMQ__RoutingKeys__NotificationRequest: user.notification.request
-
-      ## Traffic Exchange
-      RabbitMQ__RoutingKeys__TrafficCongestion: traffic.analytics.congestion.{intersection_id}
-      RabbitMQ__RoutingKeys__TrafficSummary: traffic.analytics.summary.{intersection_id}
-      RabbitMQ__RoutingKeys__TrafficIncident: traffic.analytics.incident.{intersection_id}
+      ## LOG.EXCHANGE
+      RabbitMQ__Exchanges__Log: LOG.EXCHANGE
+      # --- Publish
+      RabbitMQ__RoutingKeys__Log__Audit: log.user.notification_service.audit
+      RabbitMQ__RoutingKeys__Log__Error: log.user.notification_service.error
 
     depends_on:
       notification_mongo:
