--- a/src/back-end/UserLayer/UserService/UserAPI/docker-compose.override.yaml
+++ b/src/back-end/UserLayer/UserService/UserAPI/docker-compose.override.yaml
@@ -9,9 +9,18 @@ services:
       ASPNETCORE_ENVIRONMENT: Development
 
       # ===============================
-      # Database (MSSQL)
+      # Databases
       # ===============================
-      ConnectionStrings__DefaultConnection: Server=user_mssql,1433;Database=UserDb;User Id=sa;Password=MyPass@word;TrustServerCertificate=True
+
+      ## UserDB (MSSQL)
+      MSSQL__ConnectionString: Server=user_mssql,1433;Database=UserDB;User Id=sa;Password=MyPass@word;TrustServerCertificate=True
+
+      # ===============================
+      # CORS Policy
+      # ===============================
+      Cors__AllowedOrigins: http://localhost:5173
+      Cors__AllowedMethods: GET,POST,PUT,PATCH,DELETE
+      Cors__AllowedHeaders: Content-Type,Authorization
 
       # ===============================
       # JWT Authentication
@@ -29,41 +38,36 @@ services:
       RabbitMQ__Password: rabbitmq123
 
       # ===============================
-      # Exchanges
+      # RabbitMQ Exchanges
       # ===============================
-      RabbitMQ__Exchanges__Logs: LOG.EXCHANGE
+
+      ## USER.EXCHANGE
       RabbitMQ__Exchanges__User: USER.EXCHANGE
+      # --- Publish
+      RabbitMQ__RoutingKeys__User__NotificationRequest: user.notification.request
+      # --- Consume
+      RabbitMQ__Queues__User__Notifications: notifications.user.queue
+      RabbitMQ__RoutingKeys__User__NotificationAlert: user.notification.alert
+      RabbitMQ__RoutingKeys__User__NotificationPublic: notification.event.public_notice
+
+      ## TRAFFIC.EXCHANGE
       RabbitMQ__Exchanges__Traffic: TRAFFIC.EXCHANGE
+      # --- Publish
+      RabbitMQ__RoutingKeys__Traffic__LightControl: traffic.light.control.{intersection_id}.{light_id}
+      RabbitMQ__RoutingKeys__Traffic__LightUpdate: traffic.light.update.{intersection_id}
+      # --- Consume
+      RabbitMQ__Queues__Traffic__Analytics: traffic.analytics.user.queue
+      RabbitMQ__RoutingKeys__Traffic__Congestion: traffic.analytics.congestion.{intersection_id}
+      RabbitMQ__RoutingKeys__Traffic__Summary: traffic.analytics.summary.{intersection_id}
+      RabbitMQ__RoutingKeys__Traffic__Incident: traffic.analytics.incident.{intersection_id}
 
-      # ===============================
-      # Queues (Consumes)
-      # ===============================
-      RabbitMQ__Queues__User: user.user_service.queue
-      RabbitMQ__Queues__Traffic: traffic.user_service.queue
-
-      # ===============================
-      # Routing Keys (Consumes)
-      # ===============================
-      RabbitMQ__RoutingKeys__NotificationAlert: user.notification.alert
-      RabbitMQ__RoutingKeys__NotificationPublic: notification.event.public_notice
-      RabbitMQ__RoutingKeys__TrafficCongestion: traffic.analytics.congestion.{intersection_id}
-      RabbitMQ__RoutingKeys__TrafficSummary: traffic.analytics.summary.{intersection_id}
-      RabbitMQ__RoutingKeys__TrafficIncident: traffic.analytics.incident.{intersection_id}
-
-      # ===============================
-      # Routing Keys (Publishes)
-      # ===============================
-      RabbitMQ__RoutingKeys__NotificationRequest: user.notification.request
-      RabbitMQ__RoutingKeys__LightControl: traffic.light.control.{intersection_id}.{light_id}
-      RabbitMQ__RoutingKeys__LightUpdate: traffic.light.update.{intersection_id}
-
-      # ===============================
-      # Logs
-      # ===============================
-      RabbitMQ__RoutingKeys__Audit: log.user.user_service.audit
-      RabbitMQ__RoutingKeys__Error: log.user.user_service.error
+      ## LOG.EXCHANGE
+      RabbitMQ__Exchanges__Log: LOG.EXCHANGE
+      # --- Publish
+      RabbitMQ__RoutingKeys__Log__Audit: log.user.user_service.audit
+      RabbitMQ__RoutingKeys__Log__Error: log.user.user_service.error
 
     depends_on:
       user_mssql:
-        condition: service_started
+        condition: service_healthy
     restart: always
