--- a/src/back-end/SensorLayer/DetectionCacheDB/DetectionCacheData/DetectionCacheData.csproj
+++ b/src/back-end/SensorLayer/DetectionCacheDB/DetectionCacheData/DetectionCacheData.csproj
@@ -7,6 +7,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.Extensions.Options" Version="9.0.6" />
     <PackageReference Include="StackExchange.Redis" Version="2.9.11" />
   </ItemGroup>
 
