--- a/src/back-end/SensorLayer/SensorService/SensorAPI/SensorStore/SensorStore.csproj
+++ b/src/back-end/SensorLayer/SensorService/SensorAPI/SensorStore/SensorStore.csproj
@@ -13,6 +13,7 @@
     <PackageReference Include="MassTransit.RabbitMQ" Version="8.5.0" />
     <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="9.0.0" />
     <PackageReference Include="Microsoft.EntityFrameworkCore" Version="9.0.6" />
+    <PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
     <PackageReference Include="RabbitMQ.Client" Version="7.1.2" />
     <PackageReference Include="StackExchange.Redis" Version="2.9.11" />
     <PackageReference Include="MongoDB.Driver" Version="3.4.0" />
