--- a/src/back-end/LogLayer/Services/LogService/Docker/Dockerfile
+++ b/src/back-end/LogLayer/Services/LogService/Docker/Dockerfile
@@ -8,19 +8,24 @@ FROM mcr.microsoft.com/dotnet/sdk:9.0 AS build
 ARG BUILD_CONFIGURATION=Release
 WORKDIR /src
 
-# Copy all project layers to keep relative paths
-COPY LogLayer LogLayer/
+# Copy source code
+## API
+COPY LogLayer/Services/LogService/LogStore LogLayer/Services/LogService/LogStore/
+## Databases
+COPY LogLayer/Databases/LogDB/LogData LogLayer/Databases/LogDB/LogData/
+## Messages
+COPY MessageLayer/LogMessages MessageLayer/LogMessages/
 
 # Restore dependencies
-RUN dotnet restore LogLayer/LogService/LogAPI/LogStore/LogStore.csproj
+RUN dotnet restore LogLayer/Services/LogService/LogStore/LogStore.csproj
 
 # Build the project
-RUN dotnet build LogLayer/LogService/LogAPI/LogStore/LogStore.csproj -c $BUILD_CONFIGURATION -o /app/build
+RUN dotnet build LogLayer/Services/LogService/LogStore/LogStore.csproj -c $BUILD_CONFIGURATION -o /app/build
 
 # Publish the project
 FROM build AS publish
 ARG BUILD_CONFIGURATION=Release
-RUN dotnet publish LogLayer/LogService/LogAPI/LogStore/LogStore.csproj -c $BUILD_CONFIGURATION -o /app/publish /p:UseAppHost=false
+RUN dotnet publish LogLayer/Services/LogService/LogStore/LogStore.csproj -c $BUILD_CONFIGURATION -o /app/publish /p:UseAppHost=false
 
 # Final runtime image
 FROM base AS final
