--- a/src/back-end/UserLayer/Services/UserService/Docker/docker-compose.override.yaml
+++ b/src/back-end/UserLayer/Services/UserService/Docker/docker-compose.override.yaml
@@ -69,5 +69,5 @@ services:
 
     depends_on:
       user_mssql:
-        condition: service_healthy
+        condition: service_started
     restart: always
