--- a/src/back-end/TrafficLayer/Databases/TrafficLightDB/PostgreSQL/K8s/k8s.trafficlightdb-pv.yaml
+++ b/src/back-end/TrafficLayer/Databases/TrafficLightDB/PostgreSQL/K8s/k8s.trafficlightdb-pv.yaml
@@ -1,10 +1,10 @@
-apiVersion: apps/v1
+apiVersion: v1
 kind: PersistentVolumeClaim
 metadata:
-  name: user_data
+  name: trafficlightdb-pvc
 spec:
   accessModes:
-    - ReadWriteMany
+    - ReadWriteOnce
   resources:
     requests:
-      storage: 1Gi
+      storage: 2Gi
