--- a/src/back-end/MessageLayer/RabbitMQ/Docker/docker-compose.override.yaml
+++ b/src/back-end/MessageLayer/RabbitMQ/Docker/docker-compose.override.yaml
@@ -7,7 +7,7 @@ services:
       - RABBITMQ_DEFAULT_USER=rabbitmq
       - RABBITMQ_DEFAULT_PASS=rabbitmq123
     volumes:
-      - topics_rabbitmq_data:/var/lib/rabbitmq
+      - amqptopics_data:/var/lib/rabbitmq
     restart: always
     healthcheck:
       test: ["CMD", "rabbitmqctl", "status"]
@@ -16,6 +16,6 @@ services:
       retries: 5
 
 volumes:
-  topics_rabbitmq_data:
-    name: topics_rabbitmq_data
+  amqptopics_data:
+    name: amqptopics_data
     driver: local
