--- a/src/back-end/SensorLayer/Databases/DetectionCacheDB/Redis/Docker/docker-compose.override.yaml
+++ b/src/back-end/SensorLayer/Databases/DetectionCacheDB/Redis/Docker/docker-compose.override.yaml
@@ -1,11 +1,11 @@
 services:
-  detection_cache_redis:
+  detection_cache_db:
     ports:
       - '6380:6379'
     command: ["redis-server", "--appendonly", "yes"]
     restart: always
     volumes:
-      - detection_cache_redis_data:/data
+      - detectioncachedb_data:/data
     healthcheck:
       test: ["CMD", "redis-cli", "ping"]
       interval: 10s
@@ -13,6 +13,6 @@ services:
       retries: 5
 
 volumes:
-  detection_cache_redis_data:
-    name: detection_cache_redis_data
+  detectioncachedb_data:
+    name: detectioncachedb_data
     driver: local
