--- a/src/back-end/SensorLayer/Databases/DetectionCacheDB/Redis/Docker/docker-compose.yaml
+++ b/src/back-end/SensorLayer/Databases/DetectionCacheDB/Redis/Docker/docker-compose.yaml
@@ -1,7 +1,7 @@
 services:
-  detection_cache_redis:
+  detection_cache_db:
     image: redis:7.4
-    container_name: detection_cache_redis_container
+    container_name: detectioncachedb_container
     networks:
       - detection_cache_network
 
