--- a/src/back-end/SensorLayer/Databases/DetectionDB/Mongo/Docker/docker-compose.override.yaml
+++ b/src/back-end/SensorLayer/Databases/DetectionDB/Mongo/Docker/docker-compose.override.yaml
@@ -1,15 +1,15 @@
 services:
-  detection_mongo:
+  detection_db:
     ports:
       - '27019:27017'
     environment:
       MONGO_INITDB_ROOT_USERNAME: mongo
       MONGO_INITDB_ROOT_PASSWORD: mongo123
     volumes:
-      - detection_mongo_data:/data/db
+      - detectiondb_data:/data/db
     restart: always
 
 volumes:
-  detection_mongo_data:
-    name: detection_mongo_data
+  detectiondb_data:
+    name: detectiondb_data
     driver: local
