--- a/src/back-end/TrafficLayer/Databases/TrafficAnalyticsDB/PostgreSQL/Docker/docker-compose.override.yaml
+++ b/src/back-end/TrafficLayer/Databases/TrafficAnalyticsDB/PostgreSQL/Docker/docker-compose.override.yaml
@@ -1,5 +1,5 @@
 services:
-  traffic_analytics_postgres:
+  traffic_analytics_db:
     environment:
       POSTGRES_USER: postgres
       POSTGRES_PASSWORD: postgres123
@@ -7,7 +7,7 @@ services:
     ports:
       - '5433:5432'
     volumes:
-      - traffic_analytics_postgres_data:/var/lib/postgresql/data
+      - trafficanalyticsdb_data:/var/lib/postgresql/data
     healthcheck:
       test: ["CMD-SHELL", "pg_isready -U $${POSTGRES_USER} -d $${POSTGRES_DB} -h 127.0.0.1"]
       interval: 10s
@@ -16,6 +16,6 @@ services:
     restart: unless-stopped
 
 volumes:
-  traffic_analytics_postgres_data:
-    name: traffic_analytics_postgres_data
+  trafficanalyticsdb_data:
+    name: trafficanalyticsdb_data
     driver: local
