--- a/src/back-end/UserLayer/Databases/NotificationDB/Mongo/Docker/docker-compose.yaml
+++ b/src/back-end/UserLayer/Databases/NotificationDB/Mongo/Docker/docker-compose.yaml
@@ -1,7 +1,7 @@
 services:
-  notification_mongo:
+  notification_db:
     image: mongo:6.0
-    container_name: notification_mongo_container
+    container_name: notificationdb_container
     networks:
       - notification_network
 
