--- a/src/back-end/UserLayer/Services/NotificationService/Docker/docker-compose.override.yaml
+++ b/src/back-end/UserLayer/Services/NotificationService/Docker/docker-compose.override.yaml
@@ -13,7 +13,7 @@ services:
       # ===============================
 
       ## NotificationDB (MongoDB)
-      Mongo__ConnectionString: mongodb://mongo:mongo123@notification_mongo:27017
+      Mongo__ConnectionString: mongodb://mongo:mongo123@notification_db:27017
       Mongo__Database: NotificationDB
       Mongo__NotificationsCollection: notifications
       Mongo__DeliveryLogsCollection: delivery_logs
@@ -77,7 +77,4 @@ services:
       RabbitMQ__RoutingKeys__Log__Audit: log.user.notification_service.audit
       RabbitMQ__RoutingKeys__Log__Error: log.user.notification_service.error
 
-    depends_on:
-      notification_mongo:
-        condition: service_started
     restart: always
