--- a/src/back-end/TrafficLayer/Services/TrafficLightCoordinatorService/Docker/docker-compose.override.yaml
+++ b/src/back-end/TrafficLayer/Services/TrafficLightCoordinatorService/Docker/docker-compose.override.yaml
@@ -73,5 +73,9 @@ services:
       # --- Publish
       RabbitMQ__RoutingKeys__Log__Audit: log.traffic.coordinator_service.audit
       RabbitMQ__RoutingKeys__Log__Error: log.traffic.coordinator_service.error
+    
+    depends_on:
+      traffic_light_db:
+        condition: service_healthy
 
     restart: always
