--- a/src/back-end/UserLayer/Services/UserService/Docker/docker-compose.override.yaml
+++ b/src/back-end/UserLayer/Services/UserService/Docker/docker-compose.override.yaml
@@ -66,5 +66,9 @@ services:
       # --- Publish
       RabbitMQ__RoutingKeys__Log__Audit: log.user.user_service.audit
       RabbitMQ__RoutingKeys__Log__Error: log.user.user_service.error
-
+    
+    depends_on:
+      user_db:
+        condition: service_started
+        
     restart: always
