add livenessprobe and readiness probes

--- a/src/back-end/LogLayer/Services/LogService/K8s/k8s.logapi-deployment.yaml
+++ b/src/back-end/LogLayer/Services/LogService/K8s/k8s.logapi-deployment.yaml
@@ -144,3 +144,21 @@ spec:
           value: "log.sensor.cyclist_detection_service.error"
         - name: RabbitMQ__RoutingKeys__Sensor__IncidentError
           value: "log.sensor.incident_detection_service.error"
+
+        livenessProbe:
+          httpGet:
+            path: /health
+            port: 8080
+          initialDelaySeconds: 10
+          periodSeconds: 15
+          timeoutSeconds: 2
+          failureThreshold: 3
+
+        readinessProbe:
+          httpGet:
+            path: /ready
+            port: 8080
+          initialDelaySeconds: 15
+          periodSeconds: 20
+          timeoutSeconds: 3
+          failureThreshold: 3
