--- a/src/back-end/SensorLayer/Services/DetectionService/K8s/k8s.detectionapi-deployment.yaml
+++ b/src/back-end/SensorLayer/Services/DetectionService/K8s/k8s.detectionapi-deployment.yaml
@@ -122,3 +122,21 @@ spec:
           value: "log.sensor.detection_service.audit"
         - name: RabbitMQ__RoutingKeys__Log__Error
           value: "log.sensor.detection_service.error"
+
+        livenessProbe:
+          httpGet:
+            path: /health
+            port: 8080
+          initialDelaySeconds: 10
+          periodSeconds: 15
+          timeoutSeconds: 2
+          failureThreshold: 3
+
+        readinessProbe:
+          httpGet:
+            path: /ready
+            port: 8080
+          initialDelaySeconds: 15
+          periodSeconds: 20
+          timeoutSeconds: 3
+          failureThreshold: 3
