--- a/src/back-end/TrafficLayer/Services/TrafficLightControllerService/K8s/k8s.trafficlightcontrollerapi-deployment.yaml
+++ b/src/back-end/TrafficLayer/Services/TrafficLightControllerService/K8s/k8s.trafficlightcontrollerapi-deployment.yaml
@@ -46,3 +46,21 @@ spec:
             secretKeyRef:
               name: trafficlightcontrollerapi-secret
               key: RABBITMQ_PASSWORD
+
+        livenessProbe:
+          httpGet:
+            path: /health
+            port: 8080
+          initialDelaySeconds: 10
+          periodSeconds: 15
+          timeoutSeconds: 2
+          failureThreshold: 3
+
+        readinessProbe:
+          httpGet:
+            path: /ready
+            port: 8080
+          initialDelaySeconds: 15
+          periodSeconds: 20
+          timeoutSeconds: 3
+          failureThreshold: 3
