--- a/src/back-end/UserLayer/Services/UserService/K8s/k8s.userapi-deployment.yaml
+++ b/src/back-end/UserLayer/Services/UserService/K8s/k8s.userapi-deployment.yaml
@@ -99,3 +99,21 @@ spec:
           value: "log.user.user_service.audit"
         - name: RabbitMQ__RoutingKeys__Log__Error
           value: "log.user.user_service.error"
+
+        livenessProbe:
+          httpGet:
+            path: /health
+            port: 8080
+          initialDelaySeconds: 10
+          periodSeconds: 15
+          timeoutSeconds: 2
+          failureThreshold: 3
+
+        readinessProbe:
+          httpGet:
+            path: /ready
+            port: 8080
+          initialDelaySeconds: 15
+          periodSeconds: 20
+          timeoutSeconds: 3
+          failureThreshold: 3
